[package]
name = "riscv-stack"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

authors = ["Kurtis Dinelle <kurtisdinelle@gmail.com>", "Wouter Geraedts <git@woutergeraedts.nl>"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
keywords = ["riscv", "stack"]
description = "Stack usage tools for RISCV processors"

documentation = "https://docs.rs/riscv-stack"
repository = "https://github.com/kurtjd/riscv-stack"
readme = "README.md"

[dependencies]

[package.metadata.docs.rs]
targets = [
    "riscv32i-unknown-none-elf"
]
